# CardGames

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Card.cpp  Card.h  CardDeck.cpp  CardDeck.h  main.cpp
